<?xml version="1.0"?>
<package format="2">
  <name>dvl1000_ros</name>
  <version>0.0.0</version>
  <description>A ROS package to handle the Nortek DVL1000. Built for Vortex NTNU.</description>

  <maintainer email="chstr@stud.ntnu.no">Christopher Strøm</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
